--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   
 <body>
-  <section  style= "color:rgba(255, 80, 124, 0.993)">
+  <section>
     <h1>My Introduction To The World</h1>
       <h2><u>Particulars</u></h2>
         <p>My name is Hafiz. I am from Pakistan and I have been living in Finland for 11 years. In my 36 years of life, I have been through different study fields. I have done two bachelor degrees. One in Pakistan and the other one in Finland.</p><br>
