--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     <h2><u>Reach Out To Me:</u></h2>
     <ul>
       <li><i class="fa fa-twitter" style="font-size:24px;"></i><a href="https://twitter.com/learningwebdev1" target= "_blank">Twitter</a></li>
-      <li><i class="fa fa-linkedin" style="font-size:24px;"></i><a href="https://linkedin.com/in/hafiz-khara
-        l" target= "_blank">LinkedIn</a></li>
+      <li><i class="fa fa-linkedin" style="font-size:24px;"></i><a href="https://linkedin.com/in/hafiz-kharal" target= "_blank">LinkedIn</a></li>
       <li><i class="fa fa-github" style="font-size:24px;"></i><a href="https://github.com/hafiz-stack" target= "_blank">Github</a></li>
       <li><i class="fa fa-Stackademic" style="font-size:24px;"></i><a href="https://stackademic.com/dashboard/profile" target= "_blank">StackademicHQ</a></li>
     </ul>
