--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Semantic HTML Website</title>
   </head>
   
-<body>
+<body style= "color:black">
   <section>
     <h1>My Introduction To The World</h1>
       <h2><u>Particulars</u></h2>
