--- a/index.html
+++ b/index.html
@@ -4,30 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   
     <title>Semantic HTML Website</title>
   </head>
-  
-<body style= "color:black">
+
+<body style= "color:blue; text-align:justify">
+  <h1>My Introduction To The World</h1>
   <section>
-    <h1>My Introduction To The World</h1>
       <h2><u>Particulars</u></h2>
         <p>My name is Hafiz. I am from Pakistan and I have been living in Finland for 11 years. In my 36 years of life, I have been through different study fields. I have done two bachelor degrees. One in Pakistan and the other one in Finland.</p><br>
         <hr>
-    <h2><u>Work Experience</u></h2>
+        <h2><u>Work Experience</u></h2>
         <p> I have worked in the restaurant field for 9 years in Finland from 2009 to 2018. I changed my field to a vehicle technician in 2017. I graduated as a vehicle technician in January 2020. I started applying for jobs in my new field, but due to Covid-19 I have not been able to find a job yet. Though I have done three internships. Two in Helsinki, Finland and one in London, England. </p><br>
         <hr>
-    <h2><u>Coding Journey</u></h2>
+        <h2><u>Coding Journey</u></h2>
         <p>Due to the Covid-19 lockdown, I started studying coding on my own. I really liked it. But it is totally a new field for me that is why I am trying my best to consume this new field. And I am really lucky that I got the opportunity to be a part of a codecamp. This initiative of <a href="www.stackademic.com" target= "_blank">StackademicHQ</a> has been started by <a href="www.sunilsandhu.com" target="_blank">Sunil Sandhu</a>. I am really enjoying the way he has been teaching us. He literally has a differnt approach to coding world. And I'm lovin' it. </p><br>
   </section>
-  
+
   <footer>
-    <h2><u>Reach Out To Me:</u></h2>
-    <ul>
-      <li><i class="fa fa-twitter" style="font-size:24px;"></i><a href="https://twitter.com/learningwebdev1" target= "_blank">Twitter</a></li>
-      <li><i class="fa fa-linkedin" style="font-size:24px;"></i><a href="https://linkedin.com/in/hafiz-kharal" target= "_blank">LinkedIn</a></li>
-      <li><i class="fa fa-github" style="font-size:24px;"></i><a href="https://github.com/hafiz-stack" target= "_blank">Github</a></li>
-      <li><i class="fa fa-Stackademic" style="font-size:24px;"></i><a href="https://stackademic.com/dashboard/profile" target= "_blank">StackademicHQ</a></li>
-    </ul>
+    <h3><u>Reach Out To Me:</u></h3>
+      
+        <ul>
+          <li><i class="fa fa-twitter" style="font-size:24px;"></i><a href="https://twitter.com/learningwebdev1" target= "_blank">Twitter</a></li>
+          <li><i class="fa fa-linkedin" style="font-size:24px;"></i><a href="https://linkedin.com/in/hafiz-kharal" target= "_blank">LinkedIn</a></li>
+          <li><i class="fa fa-github" style="font-size:24px;"></i><a href="https://github.com/hafiz-stack" target= "_blank">Github</a></li>
+          <li><i class="fa fa-Stackademic" style="font-size:24px;"></i><a href="https://stackademic.com/dashboard/profile" target= "_blank">StackademicHQ</a></li>
+        </ul>
+      
   </footer>
+
+
 </body>
 </html>
