--- a/index.html
+++ b/index.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-   
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
     <title>Semantic HTML Website</title>
   </head>
 
-<body style= "color:blue; text-align:justify">
+<body>
+  
   <h1>My Introduction To The World</h1>
+  <div> <img src="Me.jpeg" style= "float: inline-end;"></div>
   <section>
       <h2><u>Particulars</u></h2>
         <p>My name is Hafiz. I am from Pakistan and I have been living in Finland for 11 years. In my 36 years of life, I have been through different study fields. I have done two bachelor degrees. One in Pakistan and the other one in Finland.</p><br>
-        <hr>
+        
         <h2><u>Work Experience</u></h2>
         <p> I have worked in the restaurant field for 9 years in Finland from 2009 to 2018. I changed my field to a vehicle technician in 2017. I graduated as a vehicle technician in January 2020. I started applying for jobs in my new field, but due to Covid-19 I have not been able to find a job yet. Though I have done three internships. Two in Helsinki, Finland and one in London, England. </p><br>
-        <hr>
+        
         <h2><u>Coding Journey</u></h2>
         <p>Due to the Covid-19 lockdown, I started studying coding on my own. I really liked it. But it is totally a new field for me that is why I am trying my best to consume this new field. And I am really lucky that I got the opportunity to be a part of a codecamp. This initiative of <a href="www.stackademic.com" target= "_blank">StackademicHQ</a> has been started by <a href="www.sunilsandhu.com" target="_blank">Sunil Sandhu</a>. I am really enjoying the way he has been teaching us. He literally has a differnt approach to coding world. And I'm lovin' it. </p><br>
   </section>
