--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">Roasting</a></li>
-        <li><a href="#">Grinding</a></li>
-        <li><a href="#">Brewing</a></li>
-        <li><a href="#">Drinks</a></li>
-        <li><a href=""#">Coffee Survey</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Particulars</a></li>
+        <li><a href="#">Work Experience</a></li>
+        <li><a href="#">Coding Journey</a></li>
+        <li><a href=""#">Connect With Me</a></li>
       </ul>
     </nav>
     </header>  
@@ -38,7 +38,7 @@
   </section>
 <hr>
   <footer>
-    <h3><u>Reach Out To Me:</u></h3>
+    <h3><u>Connect With Me:</u></h3>
       
         <ul>
           <li><i class="fa fa-twitter" style="font-size:24px;"></i><a href="https://twitter.com/learningwebdev1" target= "_blank">Twitter</a></li>
