--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <h1 class="intro">My Introduction To The World</h1>
+    <h1>My Portfolio</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
