--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 <body>
   <header>
-    <h1>My Portfolio</h1>
+    <h1>Portfolio</h1>
+  </header>
+
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -20,14 +22,14 @@
         <li><a href="#">Particulars</a></li>
         <li><a href="#">Work Experience</a></li>
         <li><a href="#">Coding Journey</a></li>
-        <li><a href=""#">Connect With Me</a></li>
+        <li><a href="#">Connect With Me</a></li>
       </ul>
     </nav>
-    </header>  
+     
   
   <section>
-      <h2><u>Particulars</u></h2>
-        <p>My name is Hafiz. I am from Pakistan and I have been living in Finland for 11 years. In my 36 years of life, I have been through different study fields. I have done two bachelor degrees. One in Pakistan and the other one in Finland.</p><br>
+    <h2><u>Particulars</u></h2>
+      <p>My name is Hafiz. I am from Pakistan and I have been living in Finland for 11 years. In my 36 years of life, I have been through different study fields. I have done two bachelor degrees. One in Pakistan and the other one in Finland.</p><br>
   </section>
 
   <section>
