--- a/index.html
+++ b/index.html
@@ -15,16 +15,14 @@
     <h1>Portfolio</h1>
   </header>
 
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Particulars</a></li>
-        <li><a href="#">Work Experience</a></li>
-        <li><a href="#">Coding Journey</a></li>
-        <li><a href="#">Connect With Me</a></li>
-      </ul>
-    </nav>
+  <nav class="navigation">
+        <a href="index.html">Home</a>
+        <a href="#">Blog</a>
+        <a href="#">Particulars</a>
+        <a href="#">Work Experience</a>
+        <a href="#">Coding Journey</a>
+        <a href="#">Connect With Me</a>
+  </nav>
      
   
   <section>
